Made some CSS tweeks to portfolio gem.

--- a/app/assets/stylesheets/site/show_portfolios.css
+++ b/app/assets/stylesheets/site/show_portfolios.css
@@ -135,6 +135,7 @@ div#portfolio-list {
   margin-right: auto;
   display: table;
   padding-top: 20px;
+  width:912px;
 }   
 
 div.portfolio-picture img {
