Added additional attribute to an artifact so that the user can specify the kind of view that will be used to show the artifact.

--- a/app/views/artifacts/edit.html.erb
+++ b/app/views/artifacts/edit.html.erb
@@ -54,7 +54,12 @@
         <%=editablefieldcreate("tag_list", @artifact)%>
 </p>
 
+ <p>
+                <b>Template:(leave blank for default)</b><br>
+                <%=ajax_select("artifact_action_viewer","artifact",@artifact, @action_viewers, "Choose Viewer...")%><br><br>
 
+            </p>
+            
   <div id="artifact-classification">
   <fieldset class="address-legend" >
     <legend class="address-lable">Classification</legend>
