fixed layout issue with portfolio list in admin mode.

--- a/app/views/site/show_custom_portfolios.html.erb
+++ b/app/views/site/show_custom_portfolios.html.erb
@@ -51,8 +51,10 @@
     </div>
     <%=paginate @customs%>
   </div>
-</div>
-
+<% if @admin_active=="false" then %>
+    </div>
+  <% end %>
+    
 <%else%>
   </br>
   </br>
