Added a class to the artifact

--- a/app/views/site/artifact_detail.erb
+++ b/app/views/site/artifact_detail.erb
@@ -10,6 +10,7 @@
         <div id="slider-width"></div>
 
     </div>
+<div class="artifact-detail">
 
     <%=artifact_edit_div(@artifact) %>
 
@@ -20,4 +21,5 @@
         <%=link_to("<< return", request.env['HTTP_REFERER']) %>
 
     </div>
+</div>
 </div>
