--- a/app/views/site/artifact_detail_custom.erb
+++ b/app/views/site/artifact_detail_custom.erb
@@ -11,7 +11,7 @@
 
   
 </div>
-
+<div class="artifact-detail-custom">
 <%=artifact_edit_div(@artifact) %>
 
 <div id="artifact-content-block">
@@ -44,3 +44,4 @@
          <%=link_to("<< return", request.env['HTTP_REFERER']) %>
 
   </div>
+</div>
