--- a/app/views/site/portfolio_detail.erb
+++ b/app/views/site/portfolio_detail.erb
@@ -17,7 +17,7 @@
         <div id="portfolio-left-pane">
 
             <div id="portfolio-image-block">
-                  <%= image_tag(((@portfolio.artifacts.order(:position)[0].pictures.where(:active_flag=>true).where(:title=>"Cover")[0].blank? ? "empty.jpg" : @portfolio.artifacts.order(:position)[0].pictures.where(:active_flag=>true).where(:title=>"Cover")[0].image_url(:large).to_s ) rescue "empty.jpg")) %>
+                  <%= image_tag(((@portfolio.artifacts.order(:position)[0].pictures.where(:title=>"Cover")[0].blank? ? "empty.jpg" : @portfolio.artifacts.order(:position)[0].pictures.where(:title=>"Cover")[0].image_url(:large).to_s ) rescue "empty.jpg")) %>
             </div>
 
             <div id="portfolio-name">
