--- a/app/assets/stylesheets/site/portfolio_detail.css
+++ b/app/assets/stylesheets/site/portfolio_detail.css
@@ -45,11 +45,12 @@ display: inline-block;
 }
 
 div#portfolio-right-pane {
-width: 375px;
-display: inline-block;
-position: relative;
-vertical-align: top;
-padding-left: 30px;
+  width: 375px;
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+  padding-left: 30px;
+  padding-bottom: 30px;
 }
 
 div#portfolio-left-pane img {
