--- a/app/views/site/artifact_detail_custom.erb
+++ b/app/views/site/artifact_detail_custom.erb
@@ -14,6 +14,15 @@
 <div class="artifact-detail-custom">
 <%=artifact_edit_div(@artifact) %>
 
+    <div class="artifact-pagination">
+            <div class="previos_artifact">
+                <%= link_to("Previous Page",{:controller=>:site, :action=>"artifact_detail", :prev=>true, :id=>@artifact} ) %>  
+            </div>
+            <div  class="next_artifact">
+                <%= link_to("Next Page",{:controller=>:site, :action=>"artifact_detail", :next=>true, :id=>@artifact}) %>
+            </div>
+        </div>
+    
 <div id="artifact-content-block">
     <div id="artifact-title">
 <%= @artifact.name.to_s.html_safe %></br>
