--- a/app/views/artifacts/artifacts_table.json.erb
+++ b/app/views/artifacts/artifacts_table.json.erb
@@ -6,7 +6,7 @@
   [
    "<%=artifact.id %> <div id='artifact-id' class='hidden-item'><%= artifact.id%></div> ",
    "<div> <%=json_clean(editablefieldcreate("name",artifact)).html_safe%> </div>",
-   "<div> <%=json_clean(editablefieldcreate("description",artifact)).html_safe%> </div>",
+   "<div class='artifact-description'> <%=json_clean(artifact.description.truncate(50, separator: ' ')).html_safe%> </div>",
    "<center><div class='delete-artifact-item'><%=image_tag('interface/delete.png', :border=>'0').gsub("\"", "'").html_safe() %></div> </center>"
    ] <% if @objects.last != artifact then %> , <% end %>
 <% end %>
