--- a/app/views/portfolios/_artifact_list.erb
+++ b/app/views/portfolios/_artifact_list.erb
@@ -2,10 +2,10 @@
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="artifacts-table">
   <thead>
     <tr>
-      <th>ID</th>
-      <th>Name</th>
+      <th width='20'>ID</th>
+      <th width='150'>Name</th>
       <th>Description</th>
-      <th>-</th>
+      <th width='5'>-</th>
     </tr>
   </thead>
   <tbody>
