--- a/app/views/portfolios/_portfolio_data_table.html.erb
+++ b/app/views/portfolios/_portfolio_data_table.html.erb
@@ -1,10 +1,10 @@
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="portfolio-table">
   <thead>
     <tr>
-      <th>Id</th>
+      <th width='20'>Id</th>
       <th>Name</th>
       <th>Body</th>
-      <th>-</th>
+      <th width='10'>-</th>
     </tr>
   </thead>
   <tbody>
