--- a/app/views/site/artifact_detail_custom.erb
+++ b/app/views/site/artifact_detail_custom.erb
@@ -16,10 +16,10 @@
 
     <div class="artifact-pagination">
             <div class="previos_artifact">
-                <%= link_to("Previous Page",{:controller=>:site, :action=>"artifact_detail", :prev=>true, :id=>@artifact} ) %>  
+                <%= link_to("< " + @artifact.previous_in_portfolio.name,{:controller=>:site, :action=>"artifact_detail", :prev=>true, :id=>@artifact} ) %>  
             </div>
             <div  class="next_artifact">
-                <%= link_to("Next Page",{:controller=>:site, :action=>"artifact_detail", :next=>true, :id=>@artifact}) %>
+                <%= link_to(@artifact.next_in_portfolio.name + " >",{:controller=>:site, :action=>"artifact_detail", :next=>true, :id=>@artifact}) %>
             </div>
         </div>
     
