Added code to CSS to support changes requested by the visual team.

--- a/app/assets/stylesheets/artifacts.css
+++ b/app/assets/stylesheets/artifacts.css
@@ -172,7 +172,7 @@ div.artifact-description, div.artifact-description p {
   margin: 0px;
 }
 
-div#field_name.myaccountcontentitem {
+/*div#field_name.myaccountcontentitem {
   margin-top: 0;
   padding-bottom: 0;
   padding-left: 0px;
@@ -180,4 +180,4 @@ div#field_name.myaccountcontentitem {
   margin-bottom: 0px;
   font-size: 12pt;
   font-weight: normal;
-}
+}*/
