--- a/app/views/site/portfolio_detail.erb
+++ b/app/views/site/portfolio_detail.erb
@@ -21,11 +21,11 @@
             </div>
 
             <div id="portfolio-name">
-                <%= @portfolio.name.to_s.html_safe %></br>
+                <%= @portfolio.location.include?("http://") ? link_to(@portfolio.name.to_s.html_safe,@portfolio.location.to_s,:title=>"Go to web site.") : @portfolio.name.to_s.html_safe %></br>
             </div>
 
-            <div id="portfolio-location">
-                <%= @portfolio.location.to_s.html_safe %></br>
+            <div id="portfolio-location" class="<%= @portfolio.location.include?("http://") ? "hidden-item":"" %> ">
+                <%=@portfolio.location.to_s.html_safe %></br>
             </div>
 
             <div id="portfolio-description">
