--- a/app/views/site/artifact_detail_custom.erb
+++ b/app/views/site/artifact_detail_custom.erb
@@ -26,7 +26,7 @@
 <div id="artifact-content-block">
     <div id="artifact-title">
 <%= @artifact.name.to_s.html_safe %></br>
-<%= @artifact.portfolio.location.to_s.html_safe %>
+<%= @artifact.portfolio.location.include?("http://") ? "" : @artifact.portfolio.location.to_s.html_safe %>
 
           
     </div>
