Fixed issue where drag handle graphic had incorrect path.

--- a/app/views/site/show_artifact_custom_group.html.erb
+++ b/app/views/site/show_artifact_custom_group.html.erb
@@ -39,7 +39,7 @@
             <%=artifact.portfolio.location rescue "unknown"%>
           </div>
           <% if @admin_active=="true" then %>
-            <%= image_tag("/images/interface/handle.png",:class=>"handle") %>
+            <%= image_tag("interface/handle.png",:class=>"handle") %>
           <% end %>
         </div>
       <% end %>
