Added preferences for portfolios to allow adjustment of slider info for customization of a site.

--- a/app/assets/stylesheets/portfolios.css
+++ b/app/assets/stylesheets/portfolios.css
@@ -25,3 +25,15 @@ table#artifacts-table {
   width: 100% !important;
   padding-top: 10px;
 }
+
+a#new-portfolio {
+  position: absolute;
+}
+.myaccountblock {
+  height: 100%;
+}
+
+a#portfolio-prefs.ui-state-default {
+  float: right;
+  border: 5px double darkgrey;
+}
