Updated both artifact details screens so that the next and prev buttons get hidden if there is only one artifact.

--- a/app/views/site/artifact_detail_custom.erb
+++ b/app/views/site/artifact_detail_custom.erb
@@ -14,14 +14,8 @@
 <div class="artifact-detail-custom">
 <%=artifact_edit_div(@artifact) %>
 
-    <div class="artifact-pagination">
-            <div class="previos_artifact">
-                <%= link_to("< " + @artifact.previous_in_portfolio.name,{:controller=>:site, :action=>"artifact_detail", :prev=>true, :id=>@artifact} ) %>  
-            </div>
-            <div  class="next_artifact">
-                <%= link_to(@artifact.next_in_portfolio.name + " >",{:controller=>:site, :action=>"artifact_detail", :next=>true, :id=>@artifact}) %>
-            </div>
-        </div>
+    <%= artifact_pagination(@artifact, "artifact_detail_custom") %>
+
     
 <div id="artifact-content-block">
     <div id="artifact-title">
