--- a/app/views/site/artifact_detail.erb
+++ b/app/views/site/artifact_detail.erb
@@ -1,13 +1,6 @@
 <%=artifact_edit_div(@artifact) %>
 <div class="artifact-pagination-float">
-    <div class="artifact-pagination">
-            <div class="previos_artifact">
-                <%= link_to("< " + @artifact.previous_in_portfolio.name,{:controller=>:site, :action=>"artifact_detail", :prev=>true, :id=>@artifact} ) %>  
-            </div>
-            <div  class="next_artifact">
-                <%= link_to(@artifact.next_in_portfolio.name + " >",{:controller=>:site, :action=>"artifact_detail", :next=>true, :id=>@artifact}) %>
-            </div>
-        </div>
+    <%= artifact_pagination(@artifact, "artifact_detail") %>
 </div>
 
 <div class="artifact-detail">
