Removed some CSS so that parent site can define.

--- a/app/assets/stylesheets/site/artifact_detail.scss
+++ b/app/assets/stylesheets/site/artifact_detail.scss
@@ -26,7 +26,7 @@ right: initial;
 }
 
 #page-content {
-min-height: 650px !important;
+/* min-height: 650px !important; */
 }
 
 div#portfolio-footer {
