Added ability to turn off artifact navigation in preferences.

--- a/app/views/portfolios/portfolio_preferences.html.erb
+++ b/app/views/portfolios/portfolio_preferences.html.erb
@@ -26,7 +26,12 @@
         <div class="cms-content">
             <p>
         <p>
-                <b>Show Navigation:</b><br>
+            
+                 <b>Show Artifact Navigation:</b><br>
+                    <%=editablecheckboxedit("artifact_nav", @settings, "Show?")%>
+                </p>
+
+                <b>Show Slider Navigation:</b><br>
                     <%=editablecheckboxedit("slider_nav", @settings, "Show?")%>
                 </p>
 
