--- a/app/views/artifacts/_image_section.html.erb
+++ b/app/views/artifacts/_image_section.html.erb
@@ -1,36 +1,15 @@
 
 <div class="imagesection">
-          <!-- START:hidden_div -->
-          
-          <%= hidden_div_if(@artifact.pictures.count > 999, :id => "imagebutton") %>
-          <%= render(:partial => "/pictures/upload_button_multi") %>
-          <%#=  render(:partial => "/pictures/upload_button")%>
-          <%="</div>".html_safe %>
-          
-          
-          <%= hidden_div_if((@artifact.pictures.empty?) , :id=>"images") %>
+    <!-- START:hidden_div -->
 
-          <%= render(:partial => "picture_list", :object => @artifact.pictures) %>
-          <%="</div>".html_safe %>
+    <div class="<%= (@artifact.pictures.count > 999 ? 'hidden-item' : '')%>" id="imagebutton" >              
+        <%= render(:partial => "/pictures/upload_button_multi") %>
+    </div>
 
 
-        
-
-          <%= render(:partial=>"/pictures/upload_template") %>
-      </div> 
-
+    <div id="images" >              
+        <%= render(:partial => "picture_list", :object => @artifact.pictures) %>
+    </div>
 
 
-<!-- <div class="imagesection">
-          <!-- START:hidden_div - ->
-          <%#= hidden_div_if(@artifact.pictures.empty?, :id => "images") %>
-          <%#= render(:partial => "images", :object => @artifact.pictures) %>
-          <%#="</div>".html_safe %>
-
-
-          <%#= hidden_div_if(@artifact.pictures.count >15, :id => "imagebutton") %>
-          <%#=render(:partial => "/images/imagebutton")%>
-          <%#="</div>".html_safe %>
-
-        </div>
-        --> 
+</div> 
