--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -10,7 +10,7 @@
   </div>
 <div class="cms-block">
 
-  <div id="site-pref-list">
+  <div id="site-pref-list" class="portfolio-list">
 
     <%= link_to 'New Portfolio',{ :action=>:create_empty_record,:typeofrecord=>"Portfolio"}, :class=>"button-link",:id=>"new-portfolio", :remote=>true%>
     <%= link_to 'Portfolio Prefs',{ :action=>:portfolio_preferences,:typeofrecord=>"Portfolio"}, :class=>"button-link",:id=>"portfolio-prefs", :remote=>true%>
