Upgraded to rails 5
--HG--
branch : v0.1.0

--- a/app/views/portfolios/portfolio_preferences.html.erb
+++ b/app/views/portfolios/portfolio_preferences.html.erb
@@ -18,6 +18,13 @@
         <b>Web Site URL</b><br>
         <%=editablefieldcreate("company_url", @settings)%>
       </p>
+      
+      
+       <p>
+        <b>Portfolios per page:</b><br>
+        <%=editablefieldcreate("portfolios_per_page", @settings, "nnn")%>
+      </p>
+      
 
         </div>
         </p>
